# aiopsql

./: README.md  pyproject.toml
aiopsql/: aiopsql.py
src/: sql.py
